--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
+blinker==1.9.0
 certifi==2025.4.26
 charset-normalizer==3.4.1
+click==8.1.8
 contourpy==1.3.2
 cycler==0.12.1
 deprecation==2.1.0
 distro==1.9.0
+Flask==3.1.0
 fonttools==4.57.0
 frozenlist==1.6.0
 gotrue==2.12.0
@@ -21,8 +24,11 @@ httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
 iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
 jiter==0.9.0
 kiwisolver==1.4.8
+MarkupSafe==3.0.2
 matplotlib==3.10.1
 multidict==6.4.3
 networkx==3.4.2
@@ -43,6 +49,7 @@ pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
+rdflib==7.1.4
 realtime==2.4.3
 requests==2.32.3
 scipy==1.15.2
@@ -58,4 +65,5 @@ typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 websockets==14.2
+Werkzeug==3.1.3
 yarl==1.20.0
