--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cycler==0.12.1
 deprecation==2.1.0
 distro==1.9.0
 Flask==3.1.0
+flask-cors==5.0.1
 fonttools==4.57.0
 frozenlist==1.6.0
 gotrue==2.12.0
